--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+*.png
 
 # PyBuilder
 target/
@@ -99,7 +100,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
-
+/data
 # mypy
 .mypy_cache/
-.ipynb
+*.ipynb
